--- a/app/templates/app/payment.html
+++ b/app/templates/app/payment.html
@@ -152,6 +152,7 @@
 
         <!-- Begin Footer Area -->
         {% include 'app/Sfoot.html' %}
+        <!--Add-->
          <!-- Footer Area End Here -->
 
         <!-- Begin Scroll To Top -->
